# C-PlusPlus_DxLib_GameTemplate

./: .gitignore  C-PlusPlus_DxLib_GameTemplate.cpp  C-PlusPlus_DxLib_GameTemplate.h  CMakeLists.txt  README.md  main.cpp
Manager/: SceneManager.cpp  SceneManager.h
Scene/: RootScene.cpp  RootScene.h
Shader/: TestPixelShader.hlsl
